--- a/dash_board/src/Components/Card.css
+++ b/dash_board/src/Components/Card.css
@@ -5,7 +5,7 @@
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
-    background-color: rgba(224, 122, 99, 0.931);
+    background-color: #f1d5d5;
 }
 
 .card {
@@ -13,7 +13,7 @@
     /* 25% width with 20px margin on each side */
     margin: 10px;
     background-color: #edb9b9;
-    border-radius: 4px;
+    border-radius: 10%;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
